--- a/app/views/shared/_attachment_actions.html.slim
+++ b/app/views/shared/_attachment_actions.html.slim
@@ -2,7 +2,7 @@
   div class="file-card"
     - resource.files.each do |file|
       div id="attachment_#{file.id}"
-        - if record_creator?(file)
+        - if can?(:destroy, file)
           = link_to 'delete file', attachment_path(file.id), method: :delete, class: 'btn btn-danger btn-sm', remote: true, data: { confirm: 'Are you sure?' }
         = link_to file.filename.to_s, url_for(file), target: "_blank"
         br
