--- a/app/views/votes/_votes_rating.html.slim
+++ b/app/views/votes/_votes_rating.html.slim
@@ -3,7 +3,7 @@ span class="rating#{resource.class.to_s}_#{resource.id}"
   = resource.rating
 
 .change-rating
-  - if current_user&.not_creator?(resource)
+  - if can?(:vote, resource)
     | Your vote:
     br
     = link_to 'Vote clear', polymorphic_path(resource, action: :vote_clear), method: :post, remote: true,
