--- a/app/views/new_answer_notify_mailer/notify_email.html.slim
+++ b/app/views/new_answer_notify_mailer/notify_email.html.slim
@@ -1,3 +1,3 @@
 h1 NewAnswerNotify
 
-p #{@creator.email}, for your question was created new answers!
+p Hi, #{@creator.email}, for your question was created new answers!
