--- a/app/views/new_answer_notify_mailer/notify_email.text.slim
+++ b/app/views/new_answer_notify_mailer/notify_email.text.slim
@@ -1,3 +1,3 @@
 ' NewAnswerNotify
 
-' #{@creator.email}, for your question was created new answers!
+' Hi, #{@creator.email}, for your question was created new answers!
