--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -9,6 +9,11 @@ div class="question_#{question.id}"
   p
     = render 'votes/votes_rating', resource: question
 
+  - if can?(:subscribe, question)
+    = link_to 'Unsub', unsubscribe_question_path, method: :delete
+  - if can?(:unsubscribe, question)
+    = link_to 'Sub', subscribe_question_path, method: :post
+  '
   - if can?(:update, question)
     = link_to 'Edit question', '#', class: 'edit-question-link text-warning', data: { question_id: question.id }
     '
