--- a/app/views/daily_mailer/digest.html.slim
+++ b/app/views/daily_mailer/digest.html.slim
@@ -3,4 +3,4 @@ h4
   | New questions for the last day:
   = @questions.count
 - @questions.each do |question|
-  = link_to question.title, question_url(question)
+  = question.title
