--- a/app/views/daily_mailer/digest.text.slim
+++ b/app/views/daily_mailer/digest.text.slim
@@ -1,5 +1,5 @@
 | Hello
 | New questions for the last day:
 = @questions.count
-- @questions.each do |question|
+- @questions.find_each do |question|
   = question.title
