--- a/app/views/questions/_partial_index.html.slim
+++ b/app/views/questions/_partial_index.html.slim
@@ -1,3 +1,4 @@
-- questions.each do |q|
-  p
-    = link_to q.title, question_path(q), class: ".show-question-link"
+- cache collection_cache_key_for(:question) do
+  - questions.each do |q|
+    p
+      = link_to q.title, question_path(q), class: ".show-question-link"
