--- a/app/views/questions/_partial_index.html.slim
+++ b/app/views/questions/_partial_index.html.slim
@@ -1,4 +1,4 @@
-- cache collection_cache_key_for(:question) do
+- cache questions do
   - questions.each do |q|
     p
       = link_to q.title, question_path(q), class: ".show-question-link"
